--- a/docs/professor/eduardo_alberto_felippsen.mdx
+++ b/docs/professor/eduardo_alberto_felippsen.mdx
@@ -74,6 +74,16 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2021",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Lógica de Programação",
           size: 2,
           teachers: [
@@ -99,18 +109,7 @@ const data = {
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: [
-        {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2021",
-          time: "10:15 - 11:05"
-        }
-      ]
+      dayClasses: []
     }
   ],
   time: [
