--- a/docs/professor/kathia_regina_kunzler_bechlin.mdx
+++ b/docs/professor/kathia_regina_kunzler_bechlin.mdx
@@ -47,18 +47,7 @@ const data = {
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Química III",
-          size: 2,
-          teachers: [
-            "Kathia Regina Kunzler Bechlin"
-          ],
-          classroom: "Laboratório de Química",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
@@ -82,6 +71,16 @@ const data = {
           classroom: "Laboratório de Química",
           students: "AGO2023",
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Química III",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "Sala 16-2",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
         }
       ]
     }
