--- a/docs/professor/rafael_gil_ferques.mdx
+++ b/docs/professor/rafael_gil_ferques.mdx
@@ -79,7 +79,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Computação Aplicada",
           students: "IIW2021",
           time: "13:10 - 14:00"
         },
