--- a/docs/sala/laboratorio_de_computacao_aplicada.mdx
+++ b/docs/sala/laboratorio_de_computacao_aplicada.mdx
@@ -1,6 +1,6 @@
 import { Grid } from "@site/src/components/Grid";
 const data = {
-  title: "Rafael Silva Santos",
+  title: "Laboratório de Computação Aplicada",
   weekClasses: [
     {
       dayName: "Segunda-Feira",
@@ -14,36 +14,6 @@ const data = {
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2022A",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Informática Básica",
-          size: 1,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "TAL2023",
-          time: "19:50 - 20:40"
-        },
-        {
-          subject: "Informática Básica",
-          size: 1,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "TAL2023",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Informática Instrumental",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "ELM2023",
-          time: "21:00 - 21:50"
         }
       ]
     },
@@ -63,47 +33,27 @@ const data = {
           classroom: "Laboratório de Computação Aplicada",
           students: "IIW2022A",
           time: "07:30 - 08:20"
-        },
-        {
-          subject: "Comércio Eletrônico e Mídias Digitais",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "TGC2021",
-          time: "21:00 - 21:50"
         }
       ]
     },
     {
       dayName: "Quinta-Feira",
-      dayClasses: [
-        {
-          subject: "Comércio Eletrônico e Mídias Digitais",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Sala 11-2",
-          students: "TGC2021",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Informática Básica",
-          size: 1,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica C",
-          students: "TAL2023",
-          time: "19:50 - 20:40"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Sexta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Serviços em nuvem",
+          size: 2,
+          teachers: [
+            "Rafael Gil Ferques"
+          ],
+          classroom: "Laboratório de Computação Aplicada",
+          students: "IIW2021",
+          time: "13:10 - 14:00"
+        }
+      ]
     }
   ],
   time: [
@@ -182,7 +132,7 @@ const data = {
   ]
 }
 
-# Rafael Silva Santos
+# Laboratório de Computação Aplicada
 
 <div>
     {
