--- a/docs/sala/sala_12-2.mdx
+++ b/docs/sala/sala_12-2.mdx
@@ -4,28 +4,7 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: [
-        {
-          subject: "Ética e Responsabilidade Social e Ambiental",
-          size: 2,
-          teachers: [
-            "Amilcar Machado Profeta Filho"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
-        },
-        {
-          subject: "Gestão de Compras e Estoques",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Terça-Feira",
@@ -39,26 +18,6 @@ const data = {
           classroom: "Sala 12-2",
           students: "EIN2022",
           time: "08:20 - 09:10"
-        },
-        {
-          subject: "Plano de Marketing",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Promoção e organização de eventos empresariais",
-          size: 2,
-          teachers: [
-            "Keyla Christina Almeida Portela"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
         },
         {
           subject: "Lingua Portuguesa 2",
@@ -85,26 +44,6 @@ const data = {
     {
       dayName: "Quarta-Feira",
       dayClasses: [
-        {
-          subject: "Contabilidade de Custos e Formação de Preços",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Contabilidade de Custos e Formação de Preços",
-          size: 2,
-          teachers: [
-            "Cesar Gomes de Freitas"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
-        },
         {
           subject: "Sociologia 2",
           size: 1,
@@ -141,26 +80,6 @@ const data = {
           time: "10:15 - 11:05"
         },
         {
-          subject: "Gestão Estratégica de Pessoas",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Técnicas de Vendas e Negociação",
-          size: 2,
-          teachers: [
-            "Novo professor de Administração PSS - 40h"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
-        },
-        {
           subject: "Artes 2",
           size: 1,
           teachers: [
@@ -175,26 +94,6 @@ const data = {
     {
       dayName: "Sexta-Feira",
       dayClasses: [
-        {
-          subject: "Direito Empresarial e Tributário",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "19:00 - 19:50"
-        },
-        {
-          subject: "Direito Empresarial e Tributário",
-          size: 2,
-          teachers: [
-            "José Jurandir Pereira Junior"
-          ],
-          classroom: "Sala 12-2",
-          students: "TGC2022",
-          time: "21:00 - 21:50"
-        },
         {
           subject: "Lingua Estrangeira Moderna 1 - Inglês",
           size: 1,
