--- a/docs/sala/sala_13-2.mdx
+++ b/docs/sala/sala_13-2.mdx
@@ -176,6 +176,16 @@ const data = {
           time: "11:05 - 11:55"
         },
         {
+          subject: "Matemática Financeira",
+          size: 2,
+          teachers: [
+            "Mauro César de Souza Siena"
+          ],
+          classroom: "Sala 13-2",
+          students: "TGC2023",
+          time: "21:00 - 21:50"
+        },
+        {
           subject: "Língua Portuguesa e Literatura II",
           size: 2,
           teachers: [
