--- a/docs/sala/sala_16-2.mdx
+++ b/docs/sala/sala_16-2.mdx
@@ -206,6 +206,16 @@ const data = {
           time: "09:25 - 10:15"
         },
         {
+          subject: "Química III",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "Sala 16-2",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
+        },
+        {
           subject: "História III",
           size: 1,
           teachers: [
