--- a/docs/turma/iiw2021.mdx
+++ b/docs/turma/iiw2021.mdx
@@ -111,6 +111,16 @@ const data = {
       dayName: "Quinta-Feira",
       dayClasses: [
         {
+          subject: "Prototipação de Interfaces e Interação Humano-Computador",
+          size: 2,
+          teachers: [
+            "Eduardo Alberto Felippsen"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: "IIW2021",
+          time: "09:25 - 10:15"
+        },
+        {
           subject: "Sociologia II",
           size: 1,
           teachers: [
@@ -119,16 +129,6 @@ const data = {
           classroom: "Sala 16-2",
           students: "IIW2021",
           time: "11:05 - 11:55"
-        },
-        {
-          subject: "Química III",
-          size: 2,
-          teachers: [
-            "Kathia Regina Kunzler Bechlin"
-          ],
-          classroom: "Laboratório de Química",
-          students: "IIW2021",
-          time: "09:25 - 10:15"
         },
         {
           subject: "Geografia II",
@@ -146,16 +146,6 @@ const data = {
       dayName: "Sexta-Feira",
       dayClasses: [
         {
-          subject: "Prototipação de Interfaces e Interação Humano-Computador",
-          size: 2,
-          teachers: [
-            "Eduardo Alberto Felippsen"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2021",
-          time: "10:15 - 11:05"
-        },
-        {
           subject: "Filosofia III",
           size: 1,
           teachers: [
@@ -164,6 +154,16 @@ const data = {
           classroom: "Sala 16-2",
           students: "IIW2021",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Química III",
+          size: 2,
+          teachers: [
+            "Kathia Regina Kunzler Bechlin"
+          ],
+          classroom: "Sala 16-2",
+          students: "IIW2021",
+          time: "10:15 - 11:05"
         },
         {
           subject: "História III",
@@ -191,7 +191,7 @@ const data = {
           teachers: [
             "Rafael Gil Ferques"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Computação Aplicada",
           students: "IIW2021",
           time: "13:10 - 14:00"
         }
