--- a/docs/turma/tal2023.mdx
+++ b/docs/turma/tal2023.mdx
@@ -31,7 +31,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Laboratório de Informatica C",
           students: "TAL2023",
           time: "19:50 - 20:40"
         },
@@ -41,7 +41,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Laboratório de Informatica C",
           students: "TAL2023",
           time: "19:00 - 19:50"
         }
@@ -137,7 +137,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Sala 2-2",
+          classroom: "Laboratório de Informatica C",
           students: "TAL2023",
           time: "19:50 - 20:40"
         }
