--- a/docs/turma/tgc2021.mdx
+++ b/docs/turma/tgc2021.mdx
@@ -71,7 +71,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Sala 11-2",
+          classroom: "Laboratório de Informatica A",
           students: "TGC2021",
           time: "21:00 - 21:50"
         }
