--- a/docs/sala/laboratorio_de_informatica_a.mdx
+++ b/docs/sala/laboratorio_de_informatica_a.mdx
@@ -24,16 +24,6 @@ const data = {
           classroom: "Laboratório de Informatica A",
           students: "TADS_ESP",
           time: "19:50 - 20:40"
-        },
-        {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2022A",
-          time: "09:25 - 10:15"
         }
       ]
     },
@@ -94,6 +84,16 @@ const data = {
           classroom: "Laboratório de Informatica A",
           students: "IIW2023A",
           time: "10:15 - 11:05"
+        },
+        {
+          subject: "Comércio Eletrônico e Mídias Digitais",
+          size: 2,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Laboratório de Informatica A",
+          students: "TGC2021",
+          time: "21:00 - 21:50"
         }
       ]
     },
@@ -109,12 +109,7 @@ const data = {
           classroom: "Laboratório de Informatica A",
           students: "IIW2023A",
           time: "07:30 - 08:20"
-        }
-      ]
-    },
-    {
-      dayName: "Sexta-Feira",
-      dayClasses: [
+        },
         {
           subject: "Prototipação de Interfaces e Interação Humano-Computador",
           size: 2,
@@ -123,8 +118,13 @@ const data = {
           ],
           classroom: "Laboratório de Informatica A",
           students: "IIW2021",
-          time: "10:15 - 11:05"
-        },
+          time: "09:25 - 10:15"
+        }
+      ]
+    },
+    {
+      dayName: "Sexta-Feira",
+      dayClasses: [
         {
           subject: "Informática Instrumental",
           size: 2,
@@ -144,16 +144,6 @@ const data = {
           classroom: "Laboratório de Informatica A",
           students: "IIW2022A",
           time: "15:05 - 15:55"
-        },
-        {
-          subject: "Serviços em nuvem",
-          size: 2,
-          teachers: [
-            "Rafael Gil Ferques"
-          ],
-          classroom: "Laboratório de Informatica A",
-          students: "IIW2021",
-          time: "13:10 - 14:00"
         }
       ]
     }
