--- a/docs/sala/laboratorio_de_informatica_b.mdx
+++ b/docs/sala/laboratorio_de_informatica_b.mdx
@@ -54,18 +54,7 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: [
-        {
-          subject: "Administração de Sistemas Operacionais e Redes",
-          size: 2,
-          teachers: [
-            "Rafael Silva Santos"
-          ],
-          classroom: "Laboratório de Informatica B",
-          students: "IIW2022A",
-          time: "07:30 - 08:20"
-        }
-      ]
+      dayClasses: []
     },
     {
       dayName: "Quinta-Feira",
