--- a/docs/sala/laboratorio_de_informatica_c.mdx
+++ b/docs/sala/laboratorio_de_informatica_c.mdx
@@ -6,6 +6,26 @@ const data = {
       dayName: "Segunda-Feira",
       dayClasses: [
         {
+          subject: "Informática Básica",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: "TAL2023",
+          time: "19:50 - 20:40"
+        },
+        {
+          subject: "Informática Básica",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: "TAL2023",
+          time: "19:00 - 19:50"
+        },
+        {
           subject: "Informática Instrumental",
           size: 2,
           teachers: [
@@ -78,6 +98,16 @@ const data = {
           classroom: "Laboratório de Informatica C",
           students: "AGO2021",
           time: "09:25 - 10:15"
+        },
+        {
+          subject: "Informática Básica",
+          size: 1,
+          teachers: [
+            "Rafael Silva Santos"
+          ],
+          classroom: "Laboratório de Informatica C",
+          students: "TAL2023",
+          time: "19:50 - 20:40"
         }
       ]
     },
