--- a/docs/sala/sala_3-1.mdx
+++ b/docs/sala/sala_3-1.mdx
@@ -4,11 +4,52 @@ const data = {
   weekClasses: [
     {
       dayName: "Segunda-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Ética e Responsabilidade Social e Ambiental",
+          size: 2,
+          teachers: [
+            "Amilcar Machado Profeta Filho"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
+        },
+        {
+          subject: "Gestão de Compras e Estoques",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        }
+      ]
     },
     {
       dayName: "Terça-Feira",
       dayClasses: [
+        {
+          subject: "Plano de Marketing",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Promoção e organização de eventos empresariais",
+          size: 2,
+          teachers: [
+            "Keyla Christina Almeida Portela"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
+        },
         {
           subject: "Matemática I",
           size: 2,
@@ -23,7 +64,28 @@ const data = {
     },
     {
       dayName: "Quarta-Feira",
-      dayClasses: []
+      dayClasses: [
+        {
+          subject: "Contabilidade de Custos e Formação de Preços",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Contabilidade de Custos e Formação de Preços",
+          size: 2,
+          teachers: [
+            "Cesar Gomes de Freitas"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
+        }
+      ]
     },
     {
       dayName: "Quinta-Feira",
@@ -47,12 +109,52 @@ const data = {
           classroom: "Sala 3-1",
           students: "COM2023",
           time: "13:10 - 14:00"
+        },
+        {
+          subject: "Gestão Estratégica de Pessoas",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS - 40h"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Técnicas de Vendas e Negociação",
+          size: 2,
+          teachers: [
+            "Novo professor de Administração PSS - 40h"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
         }
       ]
     },
     {
       dayName: "Sexta-Feira",
       dayClasses: [
+        {
+          subject: "Direito Empresarial e Tributário",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "19:00 - 19:50"
+        },
+        {
+          subject: "Direito Empresarial e Tributário",
+          size: 2,
+          teachers: [
+            "José Jurandir Pereira Junior"
+          ],
+          classroom: "Sala 3-1",
+          students: "TGC2022",
+          time: "21:00 - 21:50"
+        },
         {
           subject: "Matemática 2",
           size: 2,
@@ -82,16 +184,6 @@ const data = {
           classroom: "Sala 3-1",
           students: "EIN2020",
           time: "09:25 - 10:15"
-        },
-        {
-          subject: "Matemática Financeira",
-          size: 2,
-          teachers: [
-            "Mauro César de Souza Siena"
-          ],
-          classroom: "Sala 3-1",
-          students: "TGC2023",
-          time: "21:00 - 21:50"
         }
       ]
     }
