--- a/docs/turma/iiw2022a.mdx
+++ b/docs/turma/iiw2022a.mdx
@@ -31,7 +31,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Laboratório de Informatica A",
+          classroom: "Laboratório de Computação Aplicada",
           students: "IIW2022A",
           time: "09:25 - 10:15"
         }
@@ -111,7 +111,7 @@ const data = {
           teachers: [
             "Rafael Silva Santos"
           ],
-          classroom: "Laboratório de Informatica B",
+          classroom: "Laboratório de Computação Aplicada",
           students: "IIW2022A",
           time: "07:30 - 08:20"
         },
